Fix member page cards not wrapping problem

--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -1,5 +1,6 @@
 .list-container {
-	display: -webkit-box;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .card {
